fix valgrind errors

--- a/project02/Makefile
+++ b/project02/Makefile
@@ -4,5 +4,8 @@ serial:
 
 mpi: othello.c othello.h
 	mpicc -DMPI_ENABLED -o othello othello.c
-	mpirun -np 10 --hostfile my-hostfile ./othello
+	TMPDIR=/tmp mpirun -np 10 --hostfile my-hostfile ./othello
 
+valgrind: othello.c othello.h
+	mpicc -DMPI_ENABLED -o othello othello.c
+	TMPDIR=/tmp mpirun -np 4 --hostfile my-hostfile valgrind ./othello
