update makefile with param files

--- a/project02/Makefile
+++ b/project02/Makefile
@@ -1,11 +1,19 @@
 serial:
 	gcc -Wall -o othello othello.c
-	./othello
+	./othello initialbrd.txt evalparams.txt
 
-mpi: othello.c othello.h
+serial_v3:
+	gcc -Wall -o othello othello_v3.c
+	./othello initialbrd.txt evalparams.txt
+
+mpi:
 	mpicc -DMPI_ENABLED -o othello othello.c
-	TMPDIR=/tmp mpirun -np 10 --hostfile my-hostfile ./othello
+	TMPDIR=/tmp mpirun -np 16 --hostfile my-hostfile ./othello initialbrd.txt evalparams.txt
+
+mpi_v3:
+	mpicc -DMPI_ENABLED -o othello othello_v3.c
+	TMPDIR=/tmp mpirun -np 16 --hostfile my-hostfile ./othello initialbrd.txt evalparams.txt
 
 valgrind: othello.c othello.h
 	mpicc -DMPI_ENABLED -o othello othello.c
-	TMPDIR=/tmp mpirun -np 4 --hostfile my-hostfile valgrind ./othello
+	TMPDIR=/tmp mpirun -np 4 --hostfile my-hostfile valgrind ./othello initialbrd.txt evalparams.txt
